# Ish

./: .gitignore  Ast.c  Ast.h  CMakeLists.txt  Compilers.c  Compilers.h  INPUT1_Hello.ish  Ish.sln  Ish.vcxproj  Ish.vcxproj.filters  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Parser.h  README.md  README.txt  Reader.c  Reader.h  Scanner.c  Scanner.h  SymbolTable.c  SymbolTable.h  parsertest.ish  test.ish  test.txt
Ish/x64/Debug/: Ish.exe.recipe  Ish.ilk  vc143.idb
Ish/x64/Debug/Ish.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Ish.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
docs/: compiler-pipeline.md  language.md
examples/: factorial.ish  hello.ish  scanner-smoke.ish  semantic-error.ish  volume.ish
x64/Debug/: A32.bat  INPUT1_Hello.ish  INPUT2_Volume.ish  INPUT3_Factorial.ish  INPUT4_Datatypes.ish  INPUT5_General.ish  INPUT6_Error.ish
